Updates and new stuff

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       <ul>
         <li class="home"><a href="#">Home</a></li>
         <li><a href="imagegallery.html">Gallery</a></li>
+        <li><a href="habitat.html">Habitat</a></li>
+        <!--
         <li><a href="#">Diet</a></li>
         <li><a href="#">Mating</a></li>
-        <li><a href="#">Habitat</a></li>
         <li><a href="#">Classification</a></li>
         <li><a href="#">Anatomoy</a></li>
         <li><a href="#">Behavior</a></li>
+        -->
       </ul>
     </div>
   </div>
