add classification, add to gallery email link

--- a/classification.html
+++ b/classification.html
@@ -8,7 +8,7 @@
 <body>
 <div id="wrapper">
   <div id="header">
-    <h1>Living the Lion Life</h1>
+    <h1>Classification</h1>
     <!--
     <div id="nav-top">
       <ul>
@@ -28,7 +28,7 @@
         <li><a href="#">Diet</a></li>
         <li><a href="#">Mating</a></li>
         <li><a href="#">Habitat</a></li>
-        <li><a href="classification.html">Classification</a></li>
+        <li><a href="#">Classification</a></li>
         <li><a href="#">Anatomoy</a></li>
         <li><a href="#">Behavior</a></li>
       </ul>
@@ -37,8 +37,23 @@
   <div id="content">
     <div class="left-col">
       <div id="welcome">
-        <h2>Welcome</h2>
-        Lions are awesome
+        <h2>Scientific Name and Classification</h2>
+        <h3>Species</h3> 
+        Penthera leo
+        <h3>Sub-species</h3>
+        Traditionally, 12 recent subspecies of lion were recognised, distinguished by mane appearance, size, and distribution. Because these characteristics are very insignificant and show a high individual variability, most of these forms were probably not true subspecies, especially as they were often based upon zoo material of unknown origin that may have had "striking, but abnormal" morphological characteristics. Today, only eight subspecies are usually accepted,[15][17] although one of these, the Cape lion, formerly described as Panthera leo melanochaita, is probably invalid.
+<ul>
+        <li>P. l. persica, known as the Asiatic lion or South Asian, Persian, or Indian lion, once was widespread from Turkey, across Southwest Asia, to India and Pakistan,[23] now around 400 exist in and near the Gir Forest of India.[24] Genetic evidence suggests its ancestors split from the ancestors of sub-Saharan African lions between 203 and 74 thousand years ago.</li>
+<li>P. l. leo, known as the Barbary lion, originally ranged from Morocco to Egypt. It is extinct in the wild due to excessive hunting, as the last wild Barbary lion was killed in Morocco in 1942.[25][26] This was one of the largest of the lion subspecies,[27] with reported lengths of 3.0–3.3 m (9.8–10.8 ft) and weights of more than 200 kg (440 lb) for males. It appears to be more closely related to the Asiatic rather than sub-Saharan lions. A number of animals in captivity are likely to be Barbary lions,[28] particularly the 90 animals descended from the Moroccan Royal collection at Rabat Zoo.</li>
+<li>P. l. senegalensis, known as the West African lion, is found in western Africa, from Senegal to the Central African Republic.</li>
+<li>P. l. azandica, known as the northeast Congo Lion, is found in the northeastern parts of the Congo.</li>
+<li>P. l. nubica, known as the East African or Masai lion is found in East Africa, from Ethiopia and Kenya to Tanzania and Mozambique;[31] a local population is known as the Tsavo lion.</li>
+<li>P. l. bleyenberghi, known as the southwest African or Katanga lion, is found in southwestern Africa, Namibia, Botswana, Angola, Katanga (Democratic Republic of the Congo), Zambia, and Zimbabwe.</li>
+<li>P. l. krugeri, known as the southeast African or Transvaal lion, is found in the Transvaal region of southeastern Africa, including Kruger National Park.</li>
+<li>P. l. melanochaita, known as the Cape lion, became extinct in the wild around 1860. Results of mitochondrial DNA research do not support its status as a distinct subspecies. The Cape lion probably was only the southernmost population of the extant P. l. krugeri.</li>
+<li>A newly discerned lion subspecies could exist in captivity in Ethiopia's capital city of Addis Ababa.[32] Researchers compared the microsatellite variations over ten loci of fifteen lions in captivity with those of six different wild lion populations. They determined that these lions are genetically unique and presumably that "their wild source population is similarly unique." These lions—with males that have a distinctly dark and luxuriant mane seam to define a new subspecies perhaps native only to Ethiopia. These lions were part of a collection of the late Haile Selassie I of Ethiopia.</li>
+</ul>
+        The lion's closest relatives are the other species of the genus Panthera: the tiger, the jaguar, and the leopard. P. leo evolved in Africa between 1 million and 800,000 years ago, before spreading throughout the Holarctic region.[12] It appeared in the fossil record in Europe for the first time 700,000 years ago with the subspecies Panthera leo fossilis at Isernia in Italy. From this lion derived the later cave lion (Panthera leo spelaea), which appeared about 300,000 years ago. Lions died out in northern Eurasia at the end of the last glaciation, about 10,000 years ago; this may have been secondary to the extinction of Pleistocene megafauna.
         <!--
         <p>Don't forget to check <a href="#">free website templates</a> every day, because we add a new free website template almost daily.</p>
         <p>You can remove any link to our websites from this template you're free to use the template without linking back to us.</p>
