--- a/imagegallery.html
+++ b/imagegallery.html
@@ -22,7 +22,8 @@
 		<section>
 			<article>
 				<h3>Lion Gallery</h3><br/>
-				<label>UPLOAD YOUR IMAGES HERE:</label><input type="file" />
+				<p><label>Send us cool lion pictures to add to our gallery!</label>
+				<a href="mailto:jami.lowery@gmail.com?Subject=Lion Pictures" target="_top">Send Email</a></p>
 				<div class="thumbnails">
 				
 				<img onmouseover="preview.src=img1.src" id="img1" src="images/lion1.jpg" alt="Image Not Loaded"/>
